# routes/index.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 const contactController = require('../controllers/characters');
+const kingdomController = require('../controllers/kingdom');
 const validation = require('../middleware/validate');
 
 
@@ -19,6 +20,16 @@ router.put('/characters/:id', validation.saveCharacter, contactController.update
 
 router.delete('/characters/:id', contactController.clearPost);
 
+
+router.get('/kingdom', kingdomController.getAll);
+
+router.get('/kingdom/:id', kingdomController.getSingle);
+
+router.post('/kingdom', validation.saveKingdom, kingdomController.newPost);
+
+router.put('/kingdom/:id', validation.saveKingdom, kingdomController.updatePost);
+
+router.delete('/kingdom/:id', kingdomController.clearPost);
 
 
 module.exports = router;
